# SMART-HOME

./: .gitmodules  CMakeLists.txt  README.md
WEB_UI/: fw_update.html  gauge_style.css  home.html  iluminacion.html  index.html  login_script.js  menu.html  salidas_script.js  script.js  sensores.html  sensores_script.js  style.css
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
